# bitcask

./: .travis.yml  CMakeLists.txt  install_grpc.sh  main.cpp  readme.md
Modules/: FindgRPC.cmake
include/: CMakeLists.txt
include/bitcask/: BitCask.h  BitCaskError.h  BitCaskHandle.h  BitCaskKeyDir.h  BitCaskLogEntry.h  CRC32.h  Utility.h
protobuf/: BitCask.proto  CMakeLists.txt
src/: BitCask.cpp  BitCaskHandle.cpp  BitCaskKeyDir.cpp  BitCaskLogEntry.cpp  CMakeLists.txt  CRC32.cpp
src/server/: CMakeLists.txt
test/: CMakeLists.txt  crctest.cpp  hintfile.cpp  putandget.cpp  rolling.cpp
